add update server script